--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,10 @@
         <button type="submit">Train and Visualize</button>
     </form>
 
+    <div id="loading" style="display: none;">
+        <h2>Loading...</h2>
+    </div>
+
     <div id="results" style="display: none;">
         <h2>Results</h2>
         <img id="result_gif" src="" style="display: none;">
